# rusty-demo

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs  router.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/database/: mod.rs  pgpool.rs
scripts/docker/: create_pg.sh  pg_cli.sh
utils/: Cargo.toml
utils/src/: lib.rs
